--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ h4 {
   /* --secondary: rgb(35, 31, 32); */
   --third: linear-gradient( rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;;
   --grau: #231F20;
+  --hellgrau: #343a40!important;
   --schrift: "Unica One", Arial, Helvetica, sans-serif;
   --schatten: black;
   --feuerschatten: 0 0 20px #fefcc9, 10px -10px 30px #feec85,-20px -20px 40px #ffae34,20px -40px 50px #ec760c,-20px -60px 60px #cd4606, 0 -80px 70px #973716,
