--- a/css/style.css
+++ b/css/style.css
@@ -1127,6 +1127,23 @@ color: var(--grundfarbe);
     }
   }
 
+  /* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2s;
+  animation-name: fade;
+  animation-duration: 2s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: 0} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: 0} 
+  to {opacity: 1}
+}
 img.social-media{
   width: 66px;
   height: 48px;
