--- a/css/style.css
+++ b/css/style.css
@@ -1170,27 +1170,31 @@ color: var(--grundfarbe);
   .bannerlogo{
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
-    max-width: 800px;
-    max-height: 80%;
     z-index: 1;
     right: 0px;
     left: 0px;
     padding: 10%;
   }
+  
   @media screen and (min-width: 700px) {
     .bannerlogo{
-      max-width: 65%;
+      padding: 1%;
+    }
+  }
+  @media screen and (min-width: 700px) {
+    .bannerlogodiv{
+      max-height: 20%;
     }
   }
 
   .wiegehtdas {
     display: none;
     position: relative;
+    max-height: 30%;
   }
   .wiegehtdasimg {
-    height: fit-content;
-    width: fit-content;
+    max-width: 100%;
+    max-height: 100%;
   }
 
   /* Fading animation */
