--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ section::after {
 }
 #section10 a span {
   position: absolute;
-  top: 0;
+  top: 40px;
   left: 50%;
   width: 30px;
   height: 50px;
@@ -1294,7 +1294,7 @@ General Style
   background: var(--secondary);
   background-repeat: no-repeat;
   overflow: hidden;
-  animation: hideme 2s linear forwards;
+  animation: hideme 1s linear forwards;
 }
 
 .cd-intro-content {
