--- a/css/style.css
+++ b/css/style.css
@@ -1205,11 +1205,12 @@ color: var(--grundfarbe);
     color: var(--grundfarbe);
     display: block;
     transition: 0.3s;
-  
+    z-index: 3;
   }
   
   .sidenav a:hover{
-    color: #f1f1f1;
+    color: var(--grundfarbe);
+    z-index: 3;
   }
   
   .sidenav .closebtn {
@@ -2587,7 +2588,7 @@ Parallax
   font-family: 'Montserrat',Helvetica,Arial,Lucida,sans-serif;
   text-transform: uppercase;
   transform: rotate(360deg);
-  transform: scale(1.1);
+  transform: scale(1.3);
   color:white;
   text-decoration-line: none;
 }
@@ -2595,12 +2596,14 @@ Parallax
   content: "";
   position: absolute;
   width: 165%;
-  height: 300%;
+  height: 350%;
   background: var(--grundfarbe);
+  opacity: 0.3;
   transform: rotate(45deg);
   left: -150%;
   top: 120%;
   text-decoration-line: none;
+  z-index: 0;
 }
 .btn_nav:hover::before{
   animation: aaa 0.7s 1;
