--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,63 @@ direction: ltr;
   top: -10%;
   left: -10%;
 }
+.btn_lieferung2{
+  display: inline-block;
+  background: var(--hellgrau);
+  border-radius: 0%;
+  box-shadow: 2px 2px 4px 2px var(--secondary);
+  color: white;
+  overflow: hidden;
+  text-align: center;
+  font-family: 'Montserrat',Helvetica,Arial,Lucida,sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+    position: fixed;  
+    top: 62px; 
+    left: 1%; 
+    z-index: 4;   
+    padding: 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        margin: 4px 2px; 
+}
+
+.btn_lieferung2 i{
+  line-height: auto;
+  font-size: 25px;
+  transition: 0.2s linear;
+  color: var(--secondary);
+}
+.btn_lieferung2.link {
+  color: white;
+}
+.btn_lieferung2:hover i{
+  transform: scale(2);
+  color: #f1f1f1;
+}
+.btn_lieferung2::before{
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: var(--grundfarbe);
+  transform: rotate(0deg);
+  left: -130%;
+  top: 90%;
+}
+.btn_lieferung2:hover::before{
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
+}
 .p {
   text-align: center;
 }
